@@ -1,3 +1,11 @@
+2003-08-07  Donovan Preston  <dp@twistedmatrix.com>
+
+	* Added getAllPatterns API to Widget, which returns all nodes
+	which have the given pattern name.
+
+	* Refactored List widget to use getAllPatterns, so you can have
+	more than one listHeader, listFooter, and emptyList node.
+
 2003-08-08  Dave Peticolas  <dave@krondo.com>
 
 	* twisted/internet/base.py: remove unused internal function.
